--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [package]
 name = "future-fn"
-version = "0.3.1"
+version = "0.3.2"
+readme = "README.md"
 edition = "2024"
 authors = ["root@ltpp.vip"]
 license = "MIT"
@@ -16,7 +17,7 @@ exclude = [
 ]
 
 [dev-dependencies]
-tokio = { version = "1.47.0", features = ["full"] }
+tokio = { version = "1.47.1", features = ["full"] }
 
 [profile.dev]
 incremental = false
