--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "future-fn"
-version = "0.3.6"
+version = "0.3.7"
 readme = "README.md"
 edition = "2024"
 authors = ["root@ltpp.vip"]
@@ -9,12 +9,7 @@ description = """A Rust library providing macros to simplify the creation of asy
 keywords = ["standard", "macro", "extensions", "structures", "simplifying"]
 repository = "https://github.com/crates-dev/future-fn"
 categories = ["data-structures", "development-tools"]
-exclude = [
-    "target",
-    "Cargo.lock",
-    "sh",
-    ".github"
-]
+exclude = ["target", "Cargo.lock", "sh", ".github"]
 
 [dev-dependencies]
 tokio = { version = "1.48.0", features = ["full"] }
